loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:12: error: not found: value isGroundWhite
  white = isGroundWhite()()}
          ^